--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <title>Mencoba Git Remote</title>
 </head>
 <body>
-    <h1>Hello World</h1>
+    <h1>Hello World!</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima enim hic doloremque possimus voluptatibus, sequi harum, repellat aliquam iusto eveniet velit nam id incidunt quidem neque optio dolores quo sunt.</p>
+    
     
 </body>
 </html>
